<resources>
    <string name="app_name">FoW Tournament Factory</string>
    <string name="date">Date:</string>
    <string name="tournamenttype">Tournamenttype:</string>
    <string name="rounds">Rounds:</string>
    <string name="participants">Participants:</string>
    <string name="new_btn">new</string>
    <string name="submit">Submit</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="fow_id">FOW-ID:</string>
    <string name="missing_id">(no ID)</string>
    <string name="show_results">Show results</string>
    <string name="show_rounds">Show Rounds</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="previous">previous</string>
    <string name="no_players_selected">No Players selected</string>
    <string-array name="tournamentType">
        <item>Local</item>
        <item>Regional</item>
        <item>National</item>
        <item>International</item>
        <item>Global</item>
    </string-array>
</resources>
